Add README for Java example project